# multi-agent-collab

./: .gitignore  AGENTS.md  Makefile  README.md  pyproject.toml
.agents/: config.yaml  ownership.yaml  project-context.md  schemas.lock.json
.agents/agents/: architect.md  backend-implementer.md  devex-implementer.md  discovery.md  frontend-implementer.md  governance-maintainer.md  integrator.md  planner.md  product.md  qa.md  reviewer.md  security-implementer.md
.agents/runtime-profiles/: local-multi.yaml  local-single.yaml
.agents/workflows/: evidence-driven-development.yaml  feature-development.yaml
.github/workflows/: ci.yml  governance-pr.yml  (+1 more)
migration/: README.md  __init__.py  migrate_v5.py
schemas/: approval.schema.json  common.schema.json  config.schema.json  event.schema.json  evidence.schema.json  finding.schema.json  ownership.schema.json  result.schema.json  risk-acceptance.schema.json  run.schema.json  runtime-profile.schema.json  scope-contract.schema.json  task.schema.json  work-unit.schema.json  workflow.schema.json
scripts/: capture_v5_baseline.py
tasks/: index.yaml
tests/: test_authorityless_v6_migration.py  test_baseline_capture.py  test_cli_integration.py  test_event_projection_variants.py  test_event_store.py  test_evidence_lifecycle.py  test_examples_v6.py  test_governance.py  test_ids.py  test_migration_and_services.py  test_performance.py  test_policy.py  test_repair_round3.py  test_repair_round4.py  test_repair_round5_platform.py  test_result_intake.py  test_schema_validation.py  test_scope_amendment_and_workflow.py  test_scope_and_git.py  test_state_machine.py
(+266 files in other folders)
